SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  santos
Tag Date:    26 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131126
Tag Summary: Getting POP ready for the xlf2003 compiler

Files Modified:
M       source/hmix_del2.F90
M       source/hmix_del4.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    21 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121a
Tag Summary: Bugfix in ecosys module (see bugzilla #1866): Fe input was
             over-writing the atmospheric Fe flux instead of being added.

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  njn01
Tag Date:    21 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121
Tag Summary: Splitting the option to use reduced Arctic diffusivity out of the
             near-interial wave mixing (use the larctic_bckgrnd_vdc namelist
             variable, default is .false.)

Files Modified:
M       source/vmix_kpp.F90
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop2.xml
M       bld/namelist_files/namelist_definition_pop2.xml
===============================================================================
Tag Creator: tcraig
Developers:  tcraig
Tag Date:    01 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131101
Tag Summary: Fix rpointer permissions on 20131028 modification

Files Modified:
M       bld/pop2.buildnml.csh
===============================================================================
Tag Creator: mlevy
Developers:  tcraig
Tag Date:    28 Oct 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131028
Tag Summary: Bugfix for re-running multi-instance from start of run (rather
             than from restart file) -- pointer files were not always set
             correctly.
