@@ -988,8 +988,8 @@
 <parm_BSIbury ocn_grid="gx3v7">0.95</parm_BSIbury>
 <parm_BSIbury                 >0.65</parm_BSIbury>
 
-<parm_fe_scavenge_rate0 ocn_grid="gx3v7">1.6</parm_fe_scavenge_rate0>
-<parm_fe_scavenge_rate0                 >1.3</parm_fe_scavenge_rate0>
+<parm_fe_scavenge_rate0 ocn_grid="gx3v7">2.7</parm_fe_scavenge_rate0>
+<parm_fe_scavenge_rate0                 >3.0</parm_fe_scavenge_rate0>
 
 <parm_f_prod_sp_CaCO3 ocn_grid="gx3v7">0.053</parm_f_prod_sp_CaCO3>
 <parm_f_prod_sp_CaCO3                 >0.055</parm_f_prod_sp_CaCO3>
